--- a/clients/cimi/views/machine_templates/index.haml
+++ b/clients/cimi/views/machine_templates/index.haml
@@ -23,8 +23,8 @@
 %h3 Collection details
 
 %dl
-  %dt URI
-  %dd=@machine_templates.uri
+  %dt id
+  %dd=@machine_templates.id
   %dt Description
   %dd=@machine_templates.description
   %dt Created
