--- a/clients/cimi/views/machine_templates/show.haml
+++ b/clients/cimi/views/machine_templates/show.haml
@@ -19,9 +19,9 @@
     Providers discretion, be created by Consumers.
 
 %dl
-  %dt URI
+  %dt id
   %dd
-    %a{ :href => @machine_template.uri }=@machine_template.uri
+    %a{ :href => @machine_template.id }=@machine_template.id
   %dt Description
   %dd=@machine_template.description
   %dt Created
