--- a/clients/cimi/views/machines/show.haml
+++ b/clients/cimi/views/machines/show.haml
@@ -13,8 +13,8 @@
 
 - content_for :actions do
   %p
-    %a{ :href => "#{@machine.uri}?format=xml", :class => 'label warning' } XML
-    %a{ :href => "#{@machine.uri}?format=json", :class => 'label warning' } JSON
+    %a{ :href => "#{@machine.id}?format=xml", :class => 'label warning' } XML
+    %a{ :href => "#{@machine.id}?format=json", :class => 'label warning' } JSON
   %p
     - if @machine.state == 'STARTED'
       %form{ :action => "/cimi/machines/#{@machine.name}/stop", :method => :post, :style => 'display:inline'}
@@ -35,7 +35,7 @@
     %tr
       %th ID
       %td
-        %a{ :href => @machine.uri }=@machine.uri
+        %a{ :href => @machine.id }=@machine.id
     %tr
       %th Description
       %td=@machine.description
