--- a/clients/cimi/views/volume_images/show.haml
+++ b/clients/cimi/views/volume_images/show.haml
@@ -13,8 +13,8 @@
 
 - content_for :actions do
   %p
-    %a{ :href => "#{@volume_image.uri}?format=xml", :class => 'label warning' } XML
-    %a{ :href => "#{@volume_image.uri}?format=json", :class => 'label warning' } JSON
+    %a{ :href => "#{@volume_image.id}?format=xml", :class => 'label warning' } XML
+    %a{ :href => "#{@volume_image.id}?format=json", :class => 'label warning' } JSON
 
 %blockquote
   %p
@@ -22,9 +22,9 @@
     resources to create a Volume Instance
 
 %dl
-  %dt URI
+  %dt id
   %dd
-    %a{ :href => @volume_image.uri }=@volume_image.uri
+    %a{ :href => @volume_image.id }=@volume_image.id
   %dt Description
   %dd=@volume_image.description
   %dt Created
