--- a/clients/cimi/views/networks/show.haml
+++ b/clients/cimi/views/networks/show.haml
@@ -21,25 +21,14 @@
     This entity represents a Network - a realized entity
     that represents an abstraction of a layer 2 broadcast domain.
 
-%dl
-  %dt id
-  %dd
-    %a{ :href => @network.id }=@network.id
-  %dt Description
-  %dd=@network.description
-  %dt Created
-  %dd=@network.created
-  %dt State
-  %dd=@network.state
-  %dt Access
-  %dd=@network.access
-  %dt Bandwidth Limit
-  %dd=@network.bandwidth_limit
-  %dt Traffic Priority
-  %dd=@network.traffic_priority
-  %dt Maximum Traffic Delay
-  %dd=@network.max_traffic_delay
-  %dt Maximum Traffic Loss
-  %dd=@network.max_traffic_loss
-  %dt Maximum Traffic Jitter
-  %dd=@network.max_traffic_jitter
+-details 'Network details' do
+  -row 'ID', @network.id
+  -row 'Description', @network.description
+  -row 'Created', @network.created
+  -row 'State', @network.state
+  -row 'Access', @network.access
+  -row 'Bandwidth Limit', @network.bandwidth_limit
+  -row 'Traffic Priority', @network.traffic_priority
+  -row 'Maximum Traffic Delay', @network.max_traffic_delay
+  -row 'Maximum Traffic Loss', @network.max_traffic_loss
+  -row 'Maximum Traffic Jitter', @network.max_traffic_jitter
