--- a/server/views/errors/400.xml.haml
+++ b/server/views/errors/400.xml.haml
@@ -1,4 +1,3 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
-  %parameter #{@error.name}
   %message< #{cdata @error.message}
-
+  %backend{ :driver => driver_symbol, :provider => "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}" }
