CIMI: adds views for network_templates and routing_groups entities to CIMI client app

--- a/clients/cimi/views/networks/show.haml
+++ b/clients/cimi/views/networks/show.haml
@@ -27,6 +27,7 @@
   -row 'Created', @network.created
   -row 'State', @network.state
   -row 'Access', @network.access
+  -row 'RoutingGroup', @network.routing_group.href
   -row 'Bandwidth Limit', @network.bandwidth_limit
   -row 'Traffic Priority', @network.traffic_priority
   -row 'Maximum Traffic Delay', @network.max_traffic_delay
