Core: Disabled AJAX form submission on new firewall page (DTACLOUD-67)

--- a/server/views/firewalls/new.html.haml
+++ b/server/views/firewalls/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New Firewall
 
-%form{:action => firewalls_url, :method => :post}
+%form{:action => firewalls_url, :method => :post, :'data-ajax' => 'false'}
   %label
     Firewall Name
     %input{:name => 'name', :size => 25}/
