Core: Code cleanup in ApplicationHelper
This patch will clean method that are not longer used in
any view or code in server.rb.
Also this patch move the string helper 'truncate_words' to
String core class.

--- a/server/views/buckets/new.html.haml
+++ b/server/views/buckets/new.html.haml
@@ -1,12 +1,12 @@
 =header "New bucket"
 
 %div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
-  %form{ :action => buckets_url, :method => :post }
+  %form{ :action => buckets_url, :method => :post, :'data-ajax' => 'false' }
     %label
       Bucket Name:
       %input{ :name => 'name', :size => 250}/
       %br
-    -if driver_has_bucket_location_feature?
+    -if driver_has_feature?(:bucket_location, :buckets)
       %p
         %label
           Location: (optional)
