--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title Deltacloud API #{settings.version}
-    = stylesheet_link_tag '/stylesheets/jquery.mobile-1.0.1.min.css'
-    = stylesheet_link_tag '/stylesheets/new.css'
+    %link{ :charset => "utf-8", :href => "/stylesheets/jquery.mobile-1.0.1.min.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
+    %link{ :charset => "utf-8", :href => "/stylesheets/new.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
     %script{:type => "text/javascript", :src => "/javascripts/jquery.min.js" }
     %script{:type => "text/javascript", :src => "/javascripts/application.js" }
     %script{:type => "text/javascript", :src => "/javascripts/jquery.mobile-1.0.1.min.js" }
