--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -45,7 +45,7 @@
     %storage_volumes<
       - @instance.storage_volumes.each do |volume|
         %storage_volume{:href=> storage_volume_url(volume.keys.first), :id => volume.keys.first, :device => volume.values.first}
-  - if driver_has_auth_features?
+  - if driver.class.has_feature?(:authentication_key) or driver.class.has_feature?(:authentication_password)
     %authentication{ :type => driver_auth_feature_name }
       - if @instance.authn_feature_failed?
         %error  #{@instance.authn_error}
