--- a/server/views/keys/show.xml.haml
+++ b/server/views/keys/show.xml.haml
@@ -1,6 +1,7 @@
 - unless defined?(partial)
   !!! XML
 %key{ :href => key_url(@key.id), :id => @key.id, :type => "#{@key.credential_type}" }
+  %name=@key.name
   %actions
     - if driver.respond_to?(:destroy_key)
       %link{ :rel => "destroy", :method => "delete", :href => destroy_key_url(@key.id)}
