--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -3,20 +3,19 @@
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview, :'data-inset' => 'true'}
-
     - Deltacloud.collections.each do |c|
       - next unless c.operation(:index).has_capability?
       %li
         %a{ :href => api_url_for(c.collection_name),  :'data-icon' => "arrow-r"}=c.collection_name.to_s.gsub('_', ' ').titlecase
 
-- if @providers.size > 1
+- unless driver.configured_providers.empty?
   %div{ :'data-role' => :footer, :'data-theme' => 'a'}
     %form{ :action => settings.root_url, :method => :post, :'data-ajax' => 'false'}
       - if @driver_name
-        %input{ :name => :driver, :type => :hidden, :value => @driver_name }/
+        %input{ :name => :driver, :type => :hidden, :value => driver.name }/
       %fieldset{ :'data-type' => "horizontal", :'data-role' => "controlgroup", :id => "providers" }
         %select{:name => 'provider', :'data-inline' => 'true', :'data-native-menu' => 'false'}
           %option{ :value => 'default'} default
-          - @providers.each do |provider|
+          - driver.configured_providers.each do |provider|
             %option{ :value => provider } #{provider}
         %button{ :type => :submit, :'data-inline' => "true"} Change Provider
